2005-09-01  Sven Panne  <sven.panne@aedion.de>

	* AUTHORS: Added myself.

	* doc/alut.html: Converted spec to XHTML + CSS, no changes to the
	content itself. This is a first step towards using DocBook, which
	is far more flexible regarding the possible output formats
	(XHTML, PDF, PS, ...).

	* doc/alut.css: Added.

	* doc/noise.gif: Removed.

	* include/AL/alut.h: Synched platform-specific parts with the
	AL/ALC headers. Reformatted according to GNU standards.

	* Makefile.am, examples/Makefile.am, src/Makefile.am,
	test_suite/Makefile.am: Do not hardwire any obscure paths into the
	build process, the normal way of using headers/libraries in
	non-standard places is to set CPPFLAGS/LDFLAGS when configuring
	and building.

	* autogen.sh: Small cleanup: Be a good *nix citizen and be quiet
	when everything works. Furthermore, terminate immediately when a
	tool fails.

2005-09-01  Steve Baker  <sjbaker1@airmail.net>

	* examples/Makefile.am, examples/hello_world.c, include/AL/alut.h,
	src/alutLoader.c, src/alutWaveform.c, test_suite/Makefile.am:

	1) Replaced '//' C++ style comments with /*...*/ style for
	portability.

	2) According to the OpenAL headers, the third argument of
	alGetSourcei should be ALint - not ALuint. So 'hello_world.c'
	wouldn't compile. Fixed.

	3) It's a bad idea to sit in a tight loop doing nothing but
	alGetSourcei. On some OS's, this could lock out any other AL
	threads - with disasterous consequences.

	Rather than get into all that complexity in a 'Hello World'
	example, I elected to simply sleep for plenty of time.

	However, I did fixup the 'sleep(seconds)' versus
	'Sleep(microseconds)' issue (good way to be non-portable Mr
	Gates).

	4) Makefile.am had been changed around so that ALUT demo's and
	test_suite would link to the OpenAL library in the current build
	tree. This is bad for many reasons discussed via email - so I
	reverted that change.

	5) Evidently 'strcasecmp' doesn't exist under Windows/MSVC and