@@ -1,9 +1,8 @@
-
 #include <stdlib.h>
 #include <AL/alut.h>
 
-#ifdef WIN32
-#define sleep(x) Sleep(1000*x)
+#if defined(_WIN32)
+#define sleep(x) Sleep(1000*(x))
 #else
 #include <unistd.h>
 #endif
@@ -15,17 +14,16 @@
   Link using '-lalut -lopenal -lpthread'.
 */
 
-int main ( int argc, char **argv )
+int
+main (int argc, char **argv)
 {
-  ALuint helloBuffer, helloSource ;
-  alutInit ( & argc, argv ) ;
-  helloBuffer = alutCreateBufferHelloWorld () ;
-  alGenSources ( 1, &helloSource ) ;
-  alSourcei ( helloSource, AL_BUFFER, helloBuffer ) ;
-  alSourcePlay ( helloSource ) ;
-  sleep ( 3 ) ;
-  alutExit () ;
-  exit ( -1 ) ;
+  ALuint helloBuffer, helloSource;
+  alutInit (&argc, argv);
+  helloBuffer = alutCreateBufferHelloWorld ();
+  alGenSources (1, &helloSource);
+  alSourcei (helloSource, AL_BUFFER, helloBuffer);
+  alSourcePlay (helloSource);
+  sleep (3);
+  alutExit ();
+  return EXIT_SUCCESS;
 }
-
-
